cmake_minimum_required(VERSION 3.26)
project(Chapter02)

set(CMAKE_CXX_STANDARD 20)

add_executable(DefaultParam DefaultParam.cpp)
add_executable(DefaultParameter2 DefaultParameter2.cpp)
add_executable(FuncPoly FuncPoly.cpp)
add_executable(FuncAmbiguity FuncAmbiguity.cpp)
add_executable(FuncTemplate1 FuncTemplate1.cpp)
add_executable(FuncTemplate2 FuncTemplate2.cpp)
add_executable(InlineSample InlineSample.cpp)
